--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>完美商场</title>
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="/staticimg/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
